tooltip提示注释完成

--- a/test/Tooltip提示框.html
+++ b/test/Tooltip提示框.html
@@ -10,8 +10,9 @@
     <script src="../js/tooltip.js"></script>
     <style>
         .tooltip-box {
-            margin: 500px auto 5px;
+            margin: 500px auto;
             width: 400px;
+            height: 200px;
         }
     </style>
 </head>
