--- a/test/栅格系统.html
+++ b/test/栅格系统.html
@@ -15,7 +15,7 @@
     <script src="../dist/js/bootstrap.js"></script>
     <style>
         .show-grid [class^="col-"] {
-            margin-top : 20px;
+            margin-top       : 20px;
             background-color : rgba(86, 61, 124, 0.15);
             border           : 1px solid rgba(86, 61, 124, 0.2);
             padding-bottom   : 10px;
@@ -86,7 +86,7 @@
 </div>-->
 
 
-<div class="container show-grid">
+<!--<div class="container show-grid">
     <div class="row">
         <div class="col-sm-12 col-md-8">.col-sm-12 .col-md-8</div>
         <div class="col-sm-6 col-md-4">.col-sm-6 .col-md-4</div>
@@ -100,6 +100,15 @@
         <div class="col-sm-6">.col-sm-6</div>
         <div class="col-sm-6">.col-sm-6</div>
     </div>
-</div>
+</div>-->
 </body>
+<div class="container show-grid">
+    <div class="row">
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3<br>我要开始换行了哦！</div>
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+        <div class="clearfix visible-xs"></div>
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+    </div>
+</div>
 </html>
